# project_M2

./: .gitignore  New_regresseur.txt  README.md  Yaksawa Hc10
2DOF/: 2DOF_identif.py  2DOF_identify.py  2dof_Plot.py  robot2OF.py  robot2dof_mouvement.py
Annexe/Test_LAAS/: Robot2OF.py  robot_2DOF_movement.py
Annexes/Test_LAAS/: Robot2OF.py  module_Hc10.py  robot_2DOF_movement.py
Docker/: Dockerfile  launch.sh
Docker/melodic/: Dockerfile
Docker/noetic/: Dockerfile  launch.sh
Robot/2DOF/Code/: 2dof_Plot.py
Robot/Yaskawa/Modeles/: modeles.txt
Test_LAAS/: Robot2OF.py  module_Hc10.py
command/nodes/: Trajectory_ROS.py  computed_torque_controller_ROS.py
commande/: commande_P.py
dependencies_ros/: .gitignore
dependencies_ros/motoman_driver/: CMakeLists.txt
dependencies_ros/motoman_driver/src/: io_relay.cpp  io_relay_node.cpp
dependencies_ros/motoman_hc10_moveit_config/: CMakeLists.txt  package.xml
dependencies_ros/motoman_hc10_moveit_config/config/: fake_controllers.yaml  motoman_hc10.srdf  ros_controllers.yaml
dependencies_ros/motoman_hc10_moveit_config/launch/: demo.launch  moveit_planning_execution.launch  moveit_rviz.launch
dependencies_ros/motoman_hc10_moveit_config/scripts/: execute_trajectory.py
dependencies_ros/motoman_msgs/: CMakeLists.txt
dependencies_ros/motoman_msgs/msg/: Effort.msg  Position.msg  Vitesse.msg
hc10_ROS/: CMakeLists.txt  launch.sh
hc10_ROS/Docker/: Dockerfile
hc10_ros/: .gitignore  .setup_assistant  CMakeLists.txt  README.md  package.xml
hc10_ros/Modeles/HC10/URDF/: hc10.gazebo  hc10.sdf  hc10.urdf  hc10.xacro  hc10_macro.xacro  hc10_xacro.urdf
hc10_ros/Modeles/motoman_resources/urdf/: common_materials.xacro
hc10_ros/Modeles/planar_2DOF/URDF/: planar_2DOF.urdf  planar_2DOF_TCP.urdf  rrbot.xacro
hc10_ros/command/: CMakeLists.txt  package.xml
hc10_ros/command/msg/: ApplyJointEffort.msg
hc10_ros/command/nodes/: computed_torque_controler.py  computed_torque_controller_pin.py
hc10_ros/config/: control.yaml  control_group.yaml  control_moveit_position.yaml  control_torque.yaml  fake_controllers.yaml  kinematics.yaml  motoman_hc10.srdf  motoman_hc10_old.srdf  ompl_planning.yaml  ros_controllers.yaml
hc10_ros/launch/: 2DOF_display.launch  chomp_planning_pipeline.launch.xml  control.launch  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  display.launch  display_rviz.launch  empty_world.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  gazebo_test.launch  hc10_control.launch  hc10_control_moveit_test.launch  hc10_control_pid.launch  hc10_control_pid_group.launch  hc10_gazebo.launch  hc10_gazebo_env.launch  hc10_gazebo_wall.launch  hc10_torque_control.launch  message.txt  motoman_hc10_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  simple_simulation.launch  simulation.launch  simulation_gazebo_with_env.launch  simulation_mooveit_rviz.launch  simulation_moveit_rviz.launch  simulation_torque.launch  simulation_wall.launch  test_group.launch  trajectory_execution.launch.xml  (+2 more)
hc10_ros/launch/mooveit/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  motoman_hc10_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
hc10_ros/listener/: server.cpp
hc10_ros/meshes/env/: table.stl  walls.stl
hc10_ros/meshes/wall/: wall.stl
hc10_ros/models/hc10_model/: model.config  model.sdf
hc10_ros/mooveit/config/: fake_controllers.yaml  motoman_hc10.srdf  ros_controllers.yaml
hc10_ros/mooveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  motoman_hc10_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  test_mooveit.launch  trajectory_execution.launch.xml  warehouse.launch
hc10_ros/msg/: JointCommands.msg  JointState.msg  JointState_noHeader.msg
hc10_ros/nodes/: joint_state_listener.py
hc10_ros/scripts/: Fonction_jo.py  add_interferences.py  add_interferences_old.py  add_two_ints_client.py  add_two_ints_server.py  computed_torque_controler.py  control_torque_client.py  control_torque_server.py  data.txt  data_speed.txt  data_torque.txt  execute_trajectory.py  init_robot.py  listener.py  message.txt  moto_controll.py  parse.py  send_trajectory_moveit.py  subscriber.py  talker.py  talker_command.py  talker_moveit.py  test.py  test_odo.py  trajectoire.txt
hc10_ros/src/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  add_two_int_client.cpp  add_two_ints_server.cpp  control_joint.py  my_controller_file.cpp  my_controller_file.h  position_controller.py  publish_joint_command.cpp  test_traj.yaml
hc10_ros/src/motoman_hc10_support/urdf/: hc10_gazebo.urdf
hc10_ros/urdf/: hc10.urdf  hc10_for_env.urdf  hc10_on_table.xacro  hc10_only.urdf  hc10_with_env.urdf  hc10_with_env.xacro  materials.xacro  motoman_hc10.urdf  table.xacro  test_wall.urdf  wall.urdf  walls.xacro
hc10_ros/worlds/: empty2.world  gazebo.world
model/urdf/: planar_2DOF.urdf  planar_2DOF_TCP.urdf
robots/urdf/: planar_2DOF.urdf  planar_2DOF_TCP.urdf
(+89 files in other folders)
